# SYCLBenchmarks

./: .gitignore  README.md
src/Headers/: Prefix.h  Stencil.h
src/SYCL/2DStencil/: CMakeLists.txt  main.cpp
src/SYCL/MMul/: CMakeLists.txt  main.cpp
src/SYCL/PrefixSum/: CMakeLists.txt  main.cpp
src/Vulkan/2DStencil/: CMakeLists.txt  main.cpp
src/Vulkan/2DStencil/shaders/: Stencil.comp
src/Vulkan/MMul/: CMakeLists.txt  main.cpp
src/Vulkan/MMul/shaders/: MMul.comp  MMul64.comp
src/Vulkan/PrefixSum/: CMakeLists.txt  main.cpp
src/Vulkan/PrefixSum/shaders/: Prefix.comp
src/Vulkan/PrefixSumLocal/: CMakeLists.txt  main.cpp
src/Vulkan/PrefixSumLocal/shaders/: PartSumAdd.comp  Prefix.comp
